// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message render should return a message body 1`] = `
<div
  className="messageContent"
>
  <div
    className="message"
  >
    Hello world
  </div>
</div>
`;

exports[`Message render should return a message body along with showDateTime 1`] = `
<div
  className="messageContent"
>
  <div
    className="message"
  >
    Hello world
  </div>
  <span
    className="messageCreatedAt"
  >
    10 minutes ago
  </span>
</div>
`;
